--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 .application-totale{
-    background: "fond.jpg";
+    background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
+                  url("css/fond.jpg");
 }
 
 .titre{
